package final_exam.ca5;

public interface IATMListener {
    int onKiemTrasoDu();
    void onNhanThongBao(int soDu, boolean status);
}
